# speech-mine

./: .gitignore  .mcp.json  404.html  LICENSE  README.md  README_PYPI.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  ci_cd.yml  documentation.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml
chunk/: index.html
diagrams/: chunk.mmd  extract.mmd  search.mmd
docs/: chunk.md  extract.md  format.md  index.md  installation.md  mcp.md  models.md  output-format.md  search.md  troubleshooting.md
docs/diagrams/: format.mmd
examples/: example_chunk_config.yaml  example_extract_metadata.json  example_extract_output.csv  example_format_output.txt
extract/: index.html
format/: index.html
installation/: index.html
mcp/: index.html
models/: index.html
output-format/: index.html
search/: index.html  search_index.json
src/speech_mine/: cli.py  mcp_server.py
src/speech_mine/diarizer/: cli.py  cli_extract.py  processor.py
src/speech_mine/pickaxe/: chunk.py  cli_chunk.py
tests/: test_chunk.py  test_mcp_server.py
troubleshooting/: index.html
