[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
authors = [{name = "Beckett Frey", email = "code@beckettfrey.com"}]
name = "speech-mine"
dynamic = ["version"]
description = "A powerful tool for extracting and analyzing speech data from audio files with known speaker counts and contents."
readme = "README_PYPI.md"

license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "mcp==1.27.0",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "PyYAML>=6.0.0",
    "rapidfuzz>=3.14.1",
    "tqdm>=4.67.1",
    "whisperx>=3.7.0,<3.8",
]

[project.urls]
Homepage = "https://github.com/BeckettFrey/speech-mine"
Repository = "https://github.com/BeckettFrey/speech-mine"
Issues = "https://github.com/BeckettFrey/speech-mine/issues"

[project.scripts]
speech-mine = "speech_mine.diarizer.cli:main"
speech-mine-mcp = "speech_mine.mcp_server:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/speech_mine"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.4",
    "pytest>=8.4.2",
]
